--- a/UnityLauncherPro/Resources/Colors.xaml
+++ b/UnityLauncherPro/Resources/Colors.xaml
@@ -1,51 +1,51 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:UnityLauncherPro">
-	<SolidColorBrush x:Key="DarkestBackground" Color="#FF121212"/>
-	<SolidColorBrush x:Key="DarkMenuBar" Color="#FF0C0C0C"/>
-	<SolidColorBrush x:Key="MainBackgroundColor" Color="#FF262626"/>
-	<SolidColorBrush x:Key="TextBoxBackground" Color="#FF333337"/>
-	<SolidColorBrush x:Key="ButtonBackground" Color="#FF3F3F46"/>
-	<SolidColorBrush x:Key="ButtonForeground" Color="#FFC1C1C1"/>
-	<SolidColorBrush x:Key="DeactiveTabForeground" Color="#FFC1C1C1"/>
-    <SolidColorBrush x:Key="DeactiveTabBackground" Color="#FF1D1D1D"/>
-    <SolidColorBrush x:Key="DatagridHeaderBackground" Color="#4C3F3F46"/>
-    <SolidColorBrush x:Key="DatagridHeaderForeground" Color="#FFB6B6B6"/>
-    <SolidColorBrush x:Key="DatagridHeaderBorder" Color="#4C000000"/>
-    <SolidColorBrush x:Key="DataGridRowMouseOver" Color="#7F007ACC"/>
-    <SolidColorBrush x:Key="DataGridRowSelectedBackground" Color="#FF007ACC"/>
-    <SolidColorBrush x:Key="ScrollArrowPressed" Color="#FF838383"/>
-    <SolidColorBrush x:Key="ScrollArrowForeground" Color="#FF5E5E64"/>
-    <SolidColorBrush x:Key="ScrollBarThumbFill" Color="#FF6A6969"/>
-    <SolidColorBrush x:Key="ScrollBarBackground" Color="#FF151515"/>
-    <SolidColorBrush x:Key="ScrollBarFill" Color="#FF47474B"/>
+	<SolidColorBrush x:Key="ThemeDarkestBackground" Color="#FF121212"/>
+	<SolidColorBrush x:Key="ThemeDarkMenuBar" Color="#FF0C0C0C"/>
+	<SolidColorBrush x:Key="ThemeMainBackgroundColor" Color="#FF262626"/>
+	<SolidColorBrush x:Key="ThemeTextBoxBackground" Color="#FF333337"/>
+	<SolidColorBrush x:Key="ThemeButtonBackground" Color="#FF3F3F46"/>
+	<SolidColorBrush x:Key="ThemeButtonForeground" Color="#FFC1C1C1"/>
+	<SolidColorBrush x:Key="ThemeDeactiveTabForeground" Color="#FFC1C1C1"/>
+    <SolidColorBrush x:Key="ThemeDeactiveTabBackground" Color="#FF1D1D1D"/>
+    <SolidColorBrush x:Key="ThemeDatagridHeaderBackground" Color="#4C3F3F46"/>
+    <SolidColorBrush x:Key="ThemeDatagridHeaderForeground" Color="#FFB6B6B6"/>
+    <SolidColorBrush x:Key="ThemeDatagridHeaderBorder" Color="#4C000000"/>
+    <SolidColorBrush x:Key="ThemeDataGridRowMouseOver" Color="#7F007ACC"/>
+    <SolidColorBrush x:Key="ThemeDataGridRowSelectedBackground" Color="#FF007ACC"/>
+    <SolidColorBrush x:Key="ThemeScrollArrowPressed" Color="#FF838383"/>
+    <SolidColorBrush x:Key="ThemeScrollArrowForeground" Color="#FF5E5E64"/>
+    <SolidColorBrush x:Key="ThemeScrollBarThumbFill" Color="#FF6A6969"/>
+    <SolidColorBrush x:Key="ThemeScrollBarBackground" Color="#FF151515"/>
+    <SolidColorBrush x:Key="ThemeScrollBarFill" Color="#FF47474B"/>
 
 	<!--custom components-->
-	<SolidColorBrush x:Key="ButtonForegroundDisabled" Color="#FF707070"/>
-	<SolidColorBrush x:Key="ButtonBackgroundMouseOver" Color="#FF494949"/>
-	<SolidColorBrush x:Key="ButtonWhiteText" Color="#FFFFFFFF"/>
-	<SolidColorBrush x:Key="ButtonBackgroundPressed" Color="#FF0F0F0F"/>
-	<SolidColorBrush x:Key="MainTitle" Color="#FFB8B8B8"/>
-	<SolidColorBrush x:Key="ScrollBarEnabledForeground" Color="#FF000000"/>
+	<SolidColorBrush x:Key="ThemeButtonForegroundDisabled" Color="#FF707070"/>
+	<SolidColorBrush x:Key="ThemeButtonBackgroundMouseOver" Color="#FF494949"/>
+	<SolidColorBrush x:Key="ThemeButtonWhiteText" Color="#FFFFFFFF"/>
+	<SolidColorBrush x:Key="ThemeButtonBackgroundPressed" Color="#FF0F0F0F"/>
+	<SolidColorBrush x:Key="ThemeMainTitle" Color="#FFB8B8B8"/>
+	<SolidColorBrush x:Key="ThemeScrollBarEnabledForeground" Color="#FF000000"/>
 
 	<!--search-->
-	<SolidColorBrush x:Key="SearchPlaceholder" Color="#7F919191"/>
-	<SolidColorBrush x:Key="SearchClose" Color="#A3C1C1C1"/>
-	<SolidColorBrush x:Key="SearchCaret" Color="#FFE2E2E2"/>
-	<SolidColorBrush x:Key="SearchForeground" Color="#FFC7C7C7"/>
-	<SolidColorBrush x:Key="SearchSelection" Color="#FF003966"/>
+	<SolidColorBrush x:Key="ThemeSearchPlaceholder" Color="#7F919191"/>
+	<SolidColorBrush x:Key="ThemeSearchClose" Color="#A3C1C1C1"/>
+	<SolidColorBrush x:Key="ThemeSearchCaret" Color="#FFE2E2E2"/>
+	<SolidColorBrush x:Key="ThemeSearchForeground" Color="#FFC7C7C7"/>
+	<SolidColorBrush x:Key="ThemeSearchSelection" Color="#FF003966"/>
 
 	<!--window-->
-	<SolidColorBrush x:Key="WindowMinClose" Color="#FFC3C3C3"/>
+	<SolidColorBrush x:Key="ThemeWindowMinClose" Color="#FFC3C3C3"/>
 	
 	<!--grids-->
-	<SolidColorBrush x:Key="GridForeground" Color="#FFD8D8D8"/>
-	<SolidColorBrush x:Key="GridHorizontalGridLines" Color="#4C000000"/>
-	<SolidColorBrush x:Key="GridVerticalGridLines" Color="#19000000"/>
-	<SolidColorBrush x:Key="GridGreenText" Color="#FF00C500"/>
-	<SolidColorBrush x:Key="GridRedText" Color="#FFF54F4F"/>
+	<SolidColorBrush x:Key="ThemeGridForeground" Color="#FFD8D8D8"/>
+	<SolidColorBrush x:Key="ThemeGridHorizontalGridLines" Color="#4C000000"/>
+	<SolidColorBrush x:Key="ThemeGridVerticalGridLines" Color="#19000000"/>
+	<SolidColorBrush x:Key="ThemeGridGreenText" Color="#FF00C500"/>
+	<SolidColorBrush x:Key="ThemeGridRedText" Color="#FFF54F4F"/>
 
 	<!--statusbar-->
-	<SolidColorBrush x:Key="StatusText" Color="#FF595959"/>
+	<SolidColorBrush x:Key="ThemeStatusText" Color="#FF595959"/>
 
 </ResourceDictionary>
